Added JVM parameters so that TV-Browser will launch with Java 9+